kh-manAll, kh-shopinfo, main, yun-womanstylethumbnail 수정

--- a/beautyChuSpring/src/main/webapp/view/kh-manAll.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-manAll.html
@@ -500,8 +500,7 @@ body {
 		</div> -->
 		<div id="wrap-chu" class="wrap-chu">
 			<div style="text-align: center;">
-				<DIV
-					style="font-family: MyriadPro-Semibold, Helvetica, sans-serif;font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">MAN &nbsp; STYLE</DIV>
+				<DIV	style="font-family: MyriadPro-Semibold, Helvetica, sans-serif;font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">MAN &nbsp; STYLE</DIV>
 				<table style="margin: auto;font-family: MyriadPro-Semibold, Helvetica, sans-serif;">
 					<tr>
 						<td><input type="radio" name="radiog_dark" id="radio1"
