--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -110,10 +110,6 @@ header {
 	height: 100px;
 }
 
-footer {
-	text-align: center;
-}
-
 body {
 	height: 100%;
 	display: table;
@@ -122,7 +118,7 @@ body {
 }
 
 #footer {
-	height: 100px;
+	height: auto;
 }
 
 .yun-container {
@@ -477,17 +473,9 @@ kh-shopListName {
 			<!-- header 건들지 말긔! -->
 		</header>
 
-
-		<!--	<div id=changediv >
-			<div id=div1>1 <button class='yun-pricelist' type="button">price list</button>
-			</div>
-
-		</div> -->
-
-
 		<div id="wrap-chu" class="wrap-chu">
 			<DIV
-				style="text-align: center; font-size: 50px; height: 90px; border-bottom: 2px black solid; padding: 20px; margin-bottom: 27px; width: 1160px; color: black;">SHOP</DIV>
+				style="font-family: MyriadPro-Semibold, Helvetica, sans-serif;text-align: center; font-size: 50px; height: 90px; border-bottom: 2px black solid; padding: 20px; margin-bottom: 27px; width: 1160px; color: black;">SHOP</DIV>
 			<div class="yun-container">
 
 				<!-- 샵 테이블 삽입부 -->
@@ -505,23 +493,17 @@ kh-shopListName {
 					<div class="kh-gradation"></div>
 			</div> -->
 
-
-
-
 			</div>
 		</div>
 
 
 
-		<footer>
+		<footer id="footer">
 			<!-- footer 건들지 말긔! -->
 		</footer>
-		<!-- 
-	<script type="text/javascript"
-		src='../js/resources/jquery-2.1.1.min.js'></script>
-	<script src="../js/resources/starrr.js"></script> -->
 
-		<script type="text/javascript">
+
+	<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
 		$('header').load('common/header.html'); 
 		$('footer').load('common/footer.html');
