연예인수정

--- a/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
@@ -158,7 +158,7 @@ body {
 .yun-box {
 	position: relative;
 	width: 280px;
-	height: 427px;
+	height: 438px;
 	float: left;
 	margin: 5px;
 	font-size: 40px;
@@ -177,24 +177,26 @@ body {
 }
 
 .yun-boximage {
-	width: 280px;
-	height: 370px;
+	width: 100%;
+	height: auto;
 }
 
 .kh-basic {
+	background-color: white;
 	position: absolute;
 	bottom: 0px;
 	width: 280px;
 	text-align: center;
-	height: 57px;
+	height: 89px;
 	color: black;
 	font-size: 30px;
 	border-top: 1px #c5c5c5 solid;
 }
 
 .kh-basic h2 {
-	color: black;
+	color: #999;
 	margin-top: 15px;
+	font-family: MyriadPro-Semibold, Helvetica, sans-serif;
 }
 
 .kh-detail h2 {
@@ -231,7 +233,7 @@ body {
 	position: absolute;
 	top: 0px;
 	width: 280px;
-	height: 370px;
+	height: 349px;
 	background-color: rgba(0, 0, 0, 0.5);
 	display: none;
 }
@@ -500,8 +502,8 @@ body {
 		<div id="wrap-chu" class="wrap-chu">
 			<div style="text-align: center;">
 				<DIV
-					style="font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">CELEBRITY</DIV>
-				<table style="margin: auto;">
+					style="font-family: MyriadPro-Semibold, Helvetica, sans-serif;font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">CELEBRITY</DIV>
+				<table style="margin: auto;font-family: MyriadPro-Semibold, Helvetica, sans-serif;">
 					<tr>
 						<td><input type="radio" name="radiog_dark" id="radio1"
 							class="css-checkbox" checked="checked" /> <label for="radio1"
@@ -795,7 +797,10 @@ body {
 			});
 		}); */
 		
-		$('div').on("click",".yun-shopstyle",function() {
+		
+		
+		/* 가격표에서 스타일 클릭 */
+/* 		$('div').on("click",".yun-shopstyle",function() {
 			event.stopPropagation();
 			$('<div>').fadeIn('fast').appendTo("#changediv").attr({"id":"yun-div"+pagebtnnum,"class":"yun-div"})
 			.css({"z-index":pagebtnnum,"margin-left":"100%"}).animate({ marginLeft: "0px" }, 500);
@@ -804,7 +809,7 @@ body {
 			
 			pagebtnnum++;
 
-		});
+		}); */
 		
 		
 
@@ -1059,6 +1064,7 @@ body {
 		 			    	  var html = template(data);
 		 			    	  $('#yun-shopcomment').html(html);
 		 			      });
+		 			      
 		 			    });
 		 	 	}
  				
