--- a/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
@@ -346,6 +346,11 @@ body {
 #yun-buttondiv {
 	height: 50px;
 	float: right;
+	display: none;
+}
+
+h3{
+	display: none;
 }
 
 #yun-pricelistsection {
