나와랏 샵사진!!!

--- a/beautyChuSpring/src/main/webapp/view/templates/kh-shop-table.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/kh-shop-table.html
@@ -1,7 +1,7 @@
 
 					{{#each shopList}}
 			<div class="yun-box" data-email="{{email}}">
-				<img class="yun-boximage" src="{{shopPhotoUrl}}">
+				<img class="yun-boximage" src="../fileupload/{{shopPhotoUrl}}">
 					<div class="kh-basic">
 						<h1 id="kh-shopListName"style=" font-size: 20px;">{{shopName}}</h1>
 						<p style="font: icon; font-size: 13px; margin-top: 10px;">{{shopAddr}}</p>
