view단 수정(footer랑 css랑...등등)

--- a/beautyChuSpring/src/main/webapp/view/kh-manAll.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-manAll.html
@@ -14,9 +14,7 @@
 
 
 <!-- 라디오버튼  -->
-
 <link rel="stylesheet" href="../css/resources/radiobutton.css" />
-<!-- 마페 -->
 
 <link rel="shortcut icon" href="../images/favicon.ico"
 	type="image/x-icon">
@@ -34,7 +32,7 @@
 <link rel="stylesheet"
 	href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../css/yun/button.min.css">
-<!-- 스타일 -->
+
 <!-- 댓글 -->
 <link rel="stylesheet" href="../css/jy/jy_DG_Slider.css" type="text/css"
 	media="all" />
@@ -120,19 +118,15 @@ header {
 	height: 100px;
 }
 
-footer {
-	text-align: center;
+#footer {
+	height: auto;
 }
 
-body {
+/* body {
 	height: 100%;
 	display: table;
 	width: 100%;
-}
-
-#footer {
-	height: 100px;
-}
+} */
 
 .yun-container {
 	width: 100%;
@@ -534,16 +528,12 @@ body {
 					</div>
 					<div class="kh-gradation"></div>
 			</div>  -->
-
-		</div>
-
-		<footer>
+			</div>
+ 		</div>
+		<footer id="footer">
 			<!-- footer 건들지 말긔! -->
 		</footer>
 
-		<!-- 	<script type="text/javascript"
-		src='../js/resources/jquery-2.1.1.min.js'></script>
-	<script src="../js/resources/starrr.js"></script> -->
 
 		<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
@@ -1081,7 +1071,7 @@ body {
 			    });
 	 	}
 	</script>
-	</div>
+	
 </body>
 </html>
 
