--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -16,7 +16,6 @@
 <!-- 라디오버튼  -->
 
 <link rel="stylesheet" href="../css/resources/radiobutton.css" />
-<!-- 마페 -->
 
 <link rel="shortcut icon" href="../images/favicon.ico"
 	type="image/x-icon">
@@ -45,20 +44,12 @@
 
 
 <!-- 썸네일 이미지 -->
-<!-- 헤더랑 충돌중	<link rel="stylesheet" type="text/css" href="../css/thumnail.css" /> -->
 <link rel="stylesheet" type="text/css" href="../css/shop.css" />
 
 <!-- 공통 스크립트 -->
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
 
-
-<script>
-			window.intro = 'yes';
-	</script>
-
-<!-- 	page가 home일 경우에만 로드하는 js -->
-<!-- 공통 스크립트 -->
 
 
 <script type="text/javascript" src="../js/resources/kh/jssor.js"></script>
@@ -120,10 +111,6 @@ header {
 	height: 100px;
 }
 
-footer {
-	text-align: center;
-}
-
 body {
 	height: 100%;
 	display: table;
@@ -131,7 +118,7 @@ body {
 }
 
 #footer {
-	height: 100px;
+	height: auto;
 }
 
 .yun-container {
@@ -537,13 +524,10 @@ body {
 
 		</div>
 
-		<footer>
+		<footer id="footer">
 			<!-- footer 건들지 말긔! -->
 		</footer>
 
-		<!-- 	<script type="text/javascript"
-		src='../js/resources/jquery-2.1.1.min.js'></script>
-	<script src="../js/resources/starrr.js"></script> -->
 
 		<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
