--- a/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
@@ -16,7 +16,6 @@
 <!-- 라디오버튼  -->
 
 <link rel="stylesheet" href="../css/resources/radiobutton.css" />
-<!-- 마페 -->
 
 <link rel="shortcut icon" href="../images/favicon.ico"
 	type="image/x-icon">
@@ -45,7 +44,6 @@
 
 
 <!-- 썸네일 이미지 -->
-<!-- 헤더랑 충돌중	<link rel="stylesheet" type="text/css" href="../css/thumnail.css" /> -->
 <link rel="stylesheet" type="text/css" href="../css/shop.css" />
 
 <!-- 공통 스크립트 -->
@@ -120,10 +118,6 @@ header {
 	height: 100px;
 }
 
-footer {
-	text-align: center;
-}
-
 body {
 	height: 100%;
 	display: table;
@@ -131,7 +125,7 @@ body {
 }
 
 #footer {
-	height: 100px;
+	height: auto;
 }
 
 .yun-container {
@@ -158,7 +152,7 @@ body {
 .yun-box {
 	position: relative;
 	width: 280px;
-	height: 438px;
+	height: 427px;
 	float: left;
 	margin: 5px;
 	font-size: 40px;
@@ -168,35 +162,35 @@ body {
 	margin-top: 20px;
 }
 
-.yun-edge {
-	
-}
-
-.yun-selected {
-	
-}
-
 .yun-boximage {
-	width: 100%;
-	height: auto;
+	width: 280px;
+	height: 370px;
 }
 
 .kh-basic {
-	background-color: white;
 	position: absolute;
 	bottom: 0px;
 	width: 280px;
 	text-align: center;
-	height: 89px;
+	height: 57px;
 	color: black;
 	font-size: 30px;
 	border-top: 1px #c5c5c5 solid;
 }
 
+.buttondiv {
+	display: none;
+}
+
+h3 {
+	display: none;
+}
+
 .kh-basic h2 {
 	color: #999;
 	margin-top: 15px;
-	font-family: MyriadPro-Semibold, Helvetica, sans-serif;
+	font-family: Nanum Gothic Bold, MyriadPro-Semibold, Helvetica, sans-serif;
+	font-size: 0.7em;
 }
 
 .kh-detail h2 {
@@ -233,7 +227,7 @@ body {
 	position: absolute;
 	top: 0px;
 	width: 280px;
-	height: 349px;
+	height: 370px;
 	background-color: rgba(0, 0, 0, 0.5);
 	display: none;
 }
@@ -346,11 +340,6 @@ body {
 #yun-buttondiv {
 	height: 50px;
 	float: right;
-	display: none;
-}
-
-h3{
-	display: none;
 }
 
 #yun-pricelistsection {
@@ -508,7 +497,7 @@ h3{
 			<div style="text-align: center;">
 				<DIV
 					style="font-family: MyriadPro-Semibold, Helvetica, sans-serif;font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">CELEBRITY</DIV>
-				<table style="margin: auto;font-family: MyriadPro-Semibold, Helvetica, sans-serif;">
+				<table style="margin: auto;">
 					<tr>
 						<td><input type="radio" name="radiog_dark" id="radio1"
 							class="css-checkbox" checked="checked" /> <label for="radio1"
@@ -525,32 +514,14 @@ h3{
 					</tr>
 				</table>
 			</div>
-			<div class="yun-container"
-				style="border-top: 2px black solid; margin-top: 10px; padding-left: 30px;"></div>
-
-			<!--  			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (1).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>  -->
+			<div class="yun-container" style="border-top: 2px black solid; margin-top: 10px; padding-left: 30px;"></div>
 
 		</div>
 
-		<footer>
+		<footer id="footer">
 			<!-- footer 건들지 말긔! -->
 		</footer>
 
-		<!-- 	<script type="text/javascript"
-		src='../js/resources/jquery-2.1.1.min.js'></script>
-	<script src="../js/resources/starrr.js"></script> -->
 
 		<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
@@ -802,10 +773,7 @@ h3{
 			});
 		}); */
 		
-		
-		
-		/* 가격표에서 스타일 클릭 */
-/* 		$('div').on("click",".yun-shopstyle",function() {
+		$('div').on("click",".yun-shopstyle",function() {
 			event.stopPropagation();
 			$('<div>').fadeIn('fast').appendTo("#changediv").attr({"id":"yun-div"+pagebtnnum,"class":"yun-div"})
 			.css({"z-index":pagebtnnum,"margin-left":"100%"}).animate({ marginLeft: "0px" }, 500);
@@ -814,7 +782,7 @@ h3{
 			
 			pagebtnnum++;
 
-		}); */
+		});
 		
 		
 
@@ -1069,7 +1037,6 @@ h3{
 		 			    	  var html = template(data);
 		 			    	  $('#yun-shopcomment').html(html);
 		 			      });
-		 			      
 		 			    });
 		 	 	}
  				
