샵갤러리주소수정

--- a/beautyChuSpring/src/main/webapp/view/templates/kh-shopimage-gallery.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/kh-shopimage-gallery.html
@@ -127,8 +127,8 @@
         <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 480px; height: 416px; overflow: hidden;">
 				{{#each photos}}        
             <div>
-                <img u="image" src="{{url}}" />
-                <img u="thumb" src="{{url}}" />
+                <img u="image" src="../fileupload/{{url}}" />
+                <img u="thumb" src="../fileupload/{{url}}" />
             </div>
             {{/each}}
         </div>
