--- a/beautyChuSpring/src/main/webapp/view/templates/main-style-list.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/main-style-list.html
@@ -6,7 +6,7 @@
 		</a>
 	</div>
 	<a href='#' class="good-name">
-		<img src="http://dept.galleria.co.kr/upload/main_fashion_style/e1b15616-eeb0-418f-a93b-907da55b8f88.png" alt="">
+		<img src="../fileupload/{{genre}}" alt="">
 	</a>
 </div>
 {{/each}}
