--- a/beautyChuSpring/src/main/webapp/view/admin/coupon.html
+++ b/beautyChuSpring/src/main/webapp/view/admin/coupon.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="Dashboard">
-<meta name="keyword"
-	content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
+<meta name="keyword"	content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
 
 <title>Beauty_Chu Admin</title>
 
@@ -19,6 +18,12 @@
 <link href="assets/css/style.css" rel="stylesheet">
 <link href="assets/css/style-responsive.css" rel="stylesheet">
 
+<script type="text/javascript" src='assets/js/handlebars-v2.0.0.js'></script>
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
@@ -36,6 +41,115 @@
 			<!--logo start-->
 			<a href="coupon.html#" class="logo"><b>Beauty_Chu Admin</b></a>
 			<!--logo end-->
+			<div class="nav notify-row" id="top_menu">
+				<!--  notification start -->
+				<ul class="nav top-menu">
+					<!-- settings start -->
+					<li class="dropdown"><a data-toggle="dropdown"
+						class="dropdown-toggle" href="#"> <i class="fa fa-tasks"></i>
+							<span class="badge bg-theme">4</span>
+					</a>
+						<ul class="dropdown-menu extended tasks-bar">
+							<div class="notify-arrow notify-arrow-green"></div>
+							<li>
+								<p class="green">You have 4 pending tasks</p>
+							</li>
+							<li><a href="#">
+									<div class="task-info">
+										<div class="desc">Beauty_Chu Admin Panel</div>
+										<div class="percent">40%</div>
+									</div>
+									<div class="progress progress-striped">
+										<div class="progress-bar progress-bar-success"
+											role="progressbar" aria-valuenow="40" aria-valuemin="0"
+											aria-valuemax="100" style="width: 40%">
+											<span class="sr-only">40% Complete (success)</span>
+										</div>
+									</div>
+							</a></li>
+							<li><a href="#">
+									<div class="task-info">
+										<div class="desc">Database Update</div>
+										<div class="percent">60%</div>
+									</div>
+									<div class="progress progress-striped">
+										<div class="progress-bar progress-bar-warning"
+											role="progressbar" aria-valuenow="60" aria-valuemin="0"
+											aria-valuemax="100" style="width: 60%">
+											<span class="sr-only">60% Complete (warning)</span>
+										</div>
+									</div>
+							</a></li>
+							<li><a href="#">
+									<div class="task-info">
+										<div class="desc">Product Development</div>
+										<div class="percent">80%</div>
+									</div>
+									<div class="progress progress-striped">
+										<div class="progress-bar progress-bar-info" role="progressbar"
+											aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+											style="width: 80%">
+											<span class="sr-only">80% Complete</span>
+										</div>
+									</div>
+							</a></li>
+							<li><a href="#">
+									<div class="task-info">
+										<div class="desc">Payments Sent</div>
+										<div class="percent">70%</div>
+									</div>
+									<div class="progress progress-striped">
+										<div class="progress-bar progress-bar-danger"
+											role="progressbar" aria-valuenow="70" aria-valuemin="0"
+											aria-valuemax="100" style="width: 70%">
+											<span class="sr-only">70% Complete (Important)</span>
+										</div>
+									</div>
+							</a></li>
+							<li class="external"><a href="#">See All Tasks</a></li>
+						</ul></li>
+					<!-- settings end -->
+
+					<!-- inbox dropdown start-->
+					<li id="header_inbox_bar" class="dropdown"><a
+						data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
+							<i class="fa fa-envelope-o"></i> <span class="badge bg-theme">5</span>
+					</a>
+						<ul class="dropdown-menu extended inbox">
+							<div class="notify-arrow notify-arrow-green"></div>
+							<li>
+								<p class="green">You have 5 new messages</p>
+							</li>
+							<li><a href="#"> <span class="photo"><img
+										alt="avatar" src="assets/img/ui-zac.jpg"></span> <span
+									class="subject"> <span class="from">Zac Snider</span> <span
+										class="time">Just now</span>
+								</span> <span class="message"> Hi mate, how is everything? </span>
+							</a></li>
+							<li><a href="#"> <span class="photo"><img
+										alt="avatar" src="assets/img/ui-divya.jpg"></span> <span
+									class="subject"> <span class="from">Divya Manian</span>
+										<span class="time">40 mins.</span>
+								</span> <span class="message"> Hi, I need your help with this. </span>
+							</a></li>
+							<li><a href="#"> <span class="photo"><img
+										alt="avatar" src="assets/img/ui-danro.jpg"></span> <span
+									class="subject"> <span class="from">Dan Rogers</span> <span
+										class="time">2 hrs.</span>
+								</span> <span class="message"> Love your new Dashboard. </span>
+							</a></li>
+							<li><a href="#"> <span class="photo"><img
+										alt="avatar" src="assets/img/ui-sherman.jpg"></span> <span
+									class="subject"> <span class="from">Dj Sherman</span> <span
+										class="time">4 hrs.</span>
+								</span> <span class="message"> Please, answer asap. </span>
+							</a></li>
+							<li><a href="#">See all messages</a></li>
+						</ul></li>
+					<!-- inbox dropdown end -->
+				</ul>
+				<!--  notification end -->
+			</div>
 			<div class="top-menu">
 				<ul class="nav pull-right top-menu">
 					<li><a class="logout" href="login.html">Logout</a></li>
@@ -53,7 +167,7 @@
 				<!-- sidebar menu start-->
 				<ul class="sidebar-menu" id="nav-accordion">
 
-					<p class="centered"><a href="shop_info.html#"><img class="img-circle" width="60"></a></p>
+					<p class="centered"><a href="shop_info.html#"><img id="sidebar-shopPhoto" class="img-circle" width="100"></a></p>
               	  	<h5 id="sidebar-shopName" class="centered"></h5>
               	  	<h6 id="sidebar-shopAddr" class="centered"></h6>
               	  	<h6 id="sidebar-shopTel" class="centered"></h6>
@@ -70,6 +184,32 @@
 
 					<li class="sub-menu">
                       <a href="javascript:;" >
+                          <i class="fa fa-key"></i>
+                          <span>Shop</span>
+                      </a>
+                      <ul class="sub">
+                          <li><a  href="shop_info.html">Shop Info</a></li>
+                          <li><a  href="shop_priceList.html">Price List</a></li>
+                      </ul>
+                  </li>
+                  
+                  <li class="sub-menu">
+                      <a href="javascript:;" >
+                          <i class="fa fa-edit"></i>
+                          <span>Man Style</span>
+                      </a>
+                      <ul class="sub">
+                          <li><a href="style_man_addStyle.html">Add Man Style</a></li>
+                          <li><a  href="style_man_cut.html">Man Cut</a></li>
+                          <li><a  href="style_man_perm.html#">Man Perm</a></li>
+                          <li><a  href="style_man_color.html#">Man Color</a></li>
+                          <li><a  href="style_man_care.html#">Man Care</a></li>
+                          <li><a  href="style_man_etc.html#">Man ETC</a></li>
+                      </ul>
+                  </li>
+                  
+					<li class="sub-menu">
+                      <a href="javascript:;" >
                           <i class="fa fa-edit"></i>
                           <span>Woman Style</span>
                       </a>
@@ -83,16 +223,6 @@
                       </ul>
                   </li>
 
-					<li class="sub-menu">
-                      <a href="javascript:;" >
-                          <i class="fa fa-key"></i>
-                          <span>Shop</span>
-                      </a>
-                      <ul class="sub">
-                          <li><a  href="shop_info.html">Shop Info</a></li>
-                          <li><a  href="shop_priceList.html">Price List</a></li>
-                      </ul>
-                  </li>
                   <li class="sub-menu">
                       <a href="javascript:;" >
                           <i class="fa fa-star-o"></i>
@@ -151,264 +281,13 @@
 									<tr>
 										<th><i class="glyphicon glyphicon-user"></i> 쿠폰 소지자 계정</th>
 										<th><i class="fa fa-bullhorn"></i> 쿠폰 코드</th>
-										<th><i class="fa fa-question-circle"></i> 발급일</th>
+										<th><i class="fa fa-question-circle"></i> 사용기간</th>
 										<th><i class="fa fa-edit"></i> 상태</th>
 										<th><i class="fa fa-bookmark"></i> 확인</th>
 									</tr>
 								</thead>
-								<tbody>
-									<tr>
-										<td>yunys888@naver.com</td>
-										<td>2015A - 0101A - yunys</td>
-										<td>2015-01-01 10:10:20</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kangdh777@gmail.com</td>
-										<td>2015A - 0103C - kangd</td>
-										<td>2015-01-03 10:30:20</td>
-										<td><span class="label label-warning label-mini">미사용</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kimkih66@hanmail.net</td>
-										<td>2015A - 0104G - kimki</td>
-										<td>2015-01-04 20:20:30</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>yunys888@naver.com</td>
-										<td>2015A - 0101A - yunys</td>
-										<td>2015-01-01 10:10:20</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kangdh777@gmail.com</td>
-										<td>2015A - 0103C - kangd</td>
-										<td>2015-01-03 10:30:20</td>
-										<td><span class="label label-warning label-mini">미사용</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kimkih66@hanmail.net</td>
-										<td>2015A - 0104G - kimki</td>
-										<td>2015-01-04 20:20:30</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>yunys888@naver.com</td>
-										<td>2015A - 0101A - yunys</td>
-										<td>2015-01-01 10:10:20</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kangdh777@gmail.com</td>
-										<td>2015A - 0103C - kangd</td>
-										<td>2015-01-03 10:30:20</td>
-										<td><span class="label label-warning label-mini">미사용</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kimkih66@hanmail.net</td>
-										<td>2015A - 0104G - kimki</td>
-										<td>2015-01-04 20:20:30</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>yunys888@naver.com</td>
-										<td>2015A - 0101A - yunys</td>
-										<td>2015-01-01 10:10:20</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kangdh777@gmail.com</td>
-										<td>2015A - 0103C - kangd</td>
-										<td>2015-01-03 10:30:20</td>
-										<td><span class="label label-warning label-mini">미사용</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kimkih66@hanmail.net</td>
-										<td>2015A - 0104G - kimki</td>
-										<td>2015-01-04 20:20:30</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>yunys888@naver.com</td>
-										<td>2015A - 0101A - yunys</td>
-										<td>2015-01-01 10:10:20</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kangdh777@gmail.com</td>
-										<td>2015A - 0103C - kangd</td>
-										<td>2015-01-03 10:30:20</td>
-										<td><span class="label label-warning label-mini">미사용</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kimkih66@hanmail.net</td>
-										<td>2015A - 0104G - kimki</td>
-										<td>2015-01-04 20:20:30</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>yunys888@naver.com</td>
-										<td>2015A - 0101A - yunys</td>
-										<td>2015-01-01 10:10:20</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kangdh777@gmail.com</td>
-										<td>2015A - 0103C - kangd</td>
-										<td>2015-01-03 10:30:20</td>
-										<td><span class="label label-warning label-mini">미사용</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td>kimkih66@hanmail.net</td>
-										<td>2015A - 0104G - kimki</td>
-										<td>2015-01-04 20:20:30</td>
-										<td><span class="label label-success label-mini">사용완료</span></td>
-										<td>
-											<button class="btn btn-success btn-xs">
-												<i class="fa fa-check"></i>
-											</button>
-											<button class="btn btn-danger btn-xs">
-												<i class="fa fa-trash-o "></i>
-											</button>
-										</td>
-									</tr>
+								<tbody id="coupon-tbody">
+									
 								</tbody>
 							</table>
 						</div>
@@ -441,12 +320,13 @@
 		src="assets/js/jquery.dcjqaccordion.2.7.js"></script>
 	<script src="assets/js/jquery.scrollTo.min.js"></script>
 	<script src="assets/js/jquery.nicescroll.js" type="text/javascript"></script>
+	
 
 
 	<!--common script for all pages-->
 	<script src="assets/js/common-scripts.js"></script>
 	
-	<script type="text/javascript">
+<script>
 	var imsiEmail;
 	  $(function() {
 		    /* AJAX로 email 로그인 정보 가져오기 */
@@ -475,10 +355,10 @@
 					url : '../../json/shopInfo/list.do',
 					success : function(data) {
 						console.log(imsiEmail);
-						console.log(data.listShopInfo);
-						console.log(data.listShopInfo[0].shopPhotoUrl);
+						/* console.log(data.listShopInfo);
+						console.log(data.listShopInfo[0].shopPhotoUrl); */
 						
-						$('#sidebar-shopPhoto').attr('src', '/beautyChuSpring_K/fileupload' + data.listShopInfo[0].shopPhotoUrl);
+						$('#sidebar-shopPhoto').attr('src', '/beautyChuSpring_K/fileupload/' + data.listShopInfo[0].shopPhotoUrl);
 						$('#sidebar-shopName').text(data.listShopInfo[0].shopName);
 						$('#sidebar-shopAddr').text(data.listShopInfo[0].shopAddr);
 						$('#sidebar-shopTel').text(data.listShopInfo[0].shopTel);
@@ -488,7 +368,20 @@
 					}
 				});
 			});
-	</script>
+	  });
+	  
+	  /* coupon 정보 받아오기 */
+	   $(function () {
+		$.getJSON('../../json/coupon/couponList.do', function(data) {
+			$.get('assets/couponTable.html',function(source) {
+				var template = Handlebars.compile(source);
+					var html = template(data);
+					console.log(data);
+				$('#coupon-tbody').html(html);
+				});
+			});
+	   });
+</script>
 	
 
 </body>
